fix(dialog): add custom scrollbar to editor SettingsDialog and AddArticlesCollectonDialog

--- a/src/components/Dialogs/AddArticlesCollectionDialog/styles.module.css
+++ b/src/components/Dialogs/AddArticlesCollectionDialog/styles.module.css
@@ -31,3 +31,7 @@
   font-size: var(--font-size-sm);
   color: var(--color-grey);
 }
+
+.fixedSizeList {
+  @mixin scrollbar-thin;
+}
